unpackaged/main/default/objects/ia_crm__Project_Status__c/ia_crm__Project_Status__c.object-meta.xml
<CustomObject>
    <label>Project Status</label>
    <nameField>
        <label>Project Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>